fix(components/input-select): restored token #0

--- a/libs/theme/src/styles/theme/default.less
+++ b/libs/theme/src/styles/theme/default.less
@@ -12,6 +12,8 @@ Link - https://www.figma.com/file/lR03OmslN1ngsyglw65gKK/%F0%9F%8E%A8-Light-them
   --prizm-text-icon-reverse: var(--prizm-palette-0);
   --prizm-text-icon-exception: var(--prizm-palette-0);
 
+  --prizm-text-subscript: var(--prizm-text-icon-secondary);
+
   --prizm-background-fill-primary: var(--prizm-palette-0);
   --prizm-background-fill-secondary: var(--prizm-palette-gray-100);
   --prizm-background-fill-panel: var(--prizm-palette-0);
