--- a/libs/components/src/lib/components/dropdowns/select/input-select.component.less
+++ b/libs/components/src/lib/components/dropdowns/select/input-select.component.less
@@ -61,8 +61,7 @@
   background: var(--prizm-select-item-background, var(--prizm-bg-body));
   font-weight: var(--prizm-select-item-font-weight, 400);
   font-size: var(--prizm-select-item-font-size, 14px);
-  //color: var(--prizm-select-empty-text, var(--prizm-text-subscript, #20222b));
-  color: var(--prizm-select-empty-text, var(--prizm-text-icon-secondary));
+  color: var(--prizm-select-empty-text, var(--prizm-text-subscript, #20222b));
 }
 
 .icon-dropdown {
