feat(doc/input-tree-select): fix hint example #0

--- a/apps/doc/src/app/components/input/input-tree-select/examples/projection/tree-select-projection-example.component.html
+++ b/apps/doc/src/app/components/input/input-tree-select/examples/projection/tree-select-projection-example.component.html
@@ -3,11 +3,11 @@
     <prizm-data-list-wrapper *prizmDataList>
       <ng-container *ngFor="let arrItem of items">
         <prizm-input-tree-select-item
-          #parent="prizmHtmlRef"
           *prizmInputTreeSelectItem="arrItem; let item = item"
-          prizmHtmlRef
+          [prizmHintOnOverflow]="item.value"
+          [prizmHintOnOverflowEl]="host"
         >
-          <div class="value" [prizmHintOnOverflow]="item.value" [prizmHintHost]="parent.ref">
+          <div class="value" #host>
             {{ item.value }}
           </div>
         </prizm-input-tree-select-item>
