--- a/apps/doc/src/app/components/input/input-tree-multi-select/input-tree-multi-select.component.html
+++ b/apps/doc/src/app/components/input/input-tree-multi-select/input-tree-multi-select.component.html
@@ -266,6 +266,21 @@
       >
         Searched
       </ng-template>
+
+      <ng-template
+        documentationPropertyName="icon"
+        documentationPropertyType="PolymorphContent"
+        documentationPropertyMode="input"
+      >
+        Dropdown Icon
+      </ng-template>
+      <ng-template
+        documentationPropertyName="isChipsDeletable"
+        documentationPropertyType="boolean"
+        documentationPropertyMode="input"
+      >
+        Is Chips Deletable
+      </ng-template>
     </prizm-doc-documentation>
 
     <prizm-doc-documentation [heading]="layoutKey" [hostComponentKey]="layoutKey">
