--- a/libs/components/src/lib/components/dropdowns/tree-multi-select/item/tree-multi-select-item.component.less
+++ b/libs/components/src/lib/components/dropdowns/tree-multi-select/item/tree-multi-select-item.component.less
@@ -38,6 +38,10 @@
 .value {
   margin-left: 4px;
   width: 100%;
+  max-width: calc(100% - 20px);
+  &.has-children {
+    max-width: calc(100% - 48px);
+  }
 }
 
 .icon-with-checkbox {
