--- a/libs/components/src/lib/components/chips/chips.component.html
+++ b/libs/components/src/lib/components/chips/chips.component.html
@@ -13,7 +13,7 @@
       [hintCanShow]="hintCanShow"
       [hintDirection]="hintDirection"
       [class.single-line]="singleLine"
-      [hintText]="item"
+      [hintText]="item | prizmCallFunc : stringify"
       [deletable]="deletable"
       [disabled]="accessorIsDisabled"
       [prizmContext]="item"
@@ -22,7 +22,7 @@
       (click)="chipClick(item)"
       prizmOverflowItem
     >
-      {{ item | prizmCallFunc : stringifyDirective.stringify }}
+      {{ item | prizmCallFunc : stringify }}
     </prizm-chips-item>
 
     <ng-container *ngIf="overflowHost.active">
