--- a/apps/doc/src/app/components/input/input-tree-multi-select/examples/search/tree-select-search-example.component.html
+++ b/apps/doc/src/app/components/input/input-tree-multi-select/examples/search/tree-select-search-example.component.html
@@ -9,8 +9,12 @@
   >
     <prizm-data-list-wrapper *prizmDataList>
       <ng-container *ngFor="let arrItem of items">
-        <prizm-input-tree-multi-select-item *prizmInputTreeMultiSelectItem="arrItem; let item = item">
-          <div class="value">
+        <prizm-input-tree-multi-select-item
+          *prizmInputTreeMultiSelectItem="arrItem; let item = item"
+          [prizmHintOnOverflow]="item.value"
+          [prizmHintOnOverflowEl]="host"
+        >
+          <div class="value" #host>
             {{ item.value }}
           </div>
         </prizm-input-tree-multi-select-item>
