--- a/apps/doc/src/app/components/input/input-tree-multi-select/input-tree-multi-select.component.html
+++ b/apps/doc/src/app/components/input/input-tree-multi-select/input-tree-multi-select.component.html
@@ -38,6 +38,7 @@
           #element
           #input
           [prizmDocHostElement]="element"
+          [isChipsDeletable]="isChipsDeletable"
           [prizmDocHostElementKey]="selectKey"
           [prizmDropdownMinHeight]="prizmDropdownMinHeight"
           [prizmDropdownMaxHeight]="prizmDropdownMaxHeight"
@@ -47,16 +48,16 @@
           [stringify]="stringify"
           [getChildren]="getChildren"
           [formControl]="control"
+          [searchable]="searchable"
         >
           <prizm-data-list-wrapper *prizmDataList>
             <ng-container *ngFor="let arrItem of items">
               <prizm-input-tree-multi-select-item
-                #parent="prizmHtmlRef"
                 *prizmInputTreeMultiSelectItem="arrItem; let item = item"
-                prizmHtmlRef
+                [prizmHintOnOverflow]="item.value"
+                [prizmHintOnOverflowEl]="host"
               >
-                <!--                [prizmHintOnOverflow]="item.value" [prizmHintHost]="parent.ref"-->
-                <div class="value">
+                <div class="value" #host>
                   {{ item }}
                 </div>
               </prizm-input-tree-multi-select-item>
@@ -64,43 +65,6 @@
           </prizm-data-list-wrapper>
         </prizm-input-tree-multi-select>
       </prizm-input-layout>
-      <!--      <prizm-input-layout-->
-      <!--        #inputElement-->
-      <!--        [prizmDocHostElement]="inputElement"-->
-      <!--        [prizmDocHostElementKey]="layoutKey"-->
-      <!--        [size]="size"-->
-      <!--        [label]="label"-->
-      <!--        [outer]="outer"-->
-      <!--        [border]="border"-->
-      <!--        [position]="inputPosition"-->
-      <!--        [status]="status"-->
-      <!--        [forceClear]="forceClear"-->
-      <!--        [hideClearButtonHint]="hideClearButtonHint"-->
-      <!--      >-->
-      <!--        <prizm-input-select-->
-      <!--          #element-->
-      <!--          [prizmDocHostElement]="element"-->
-      <!--          [prizmDocHostElementKey]="selectKey"-->
-      <!--          [placeholder]="placeholder"-->
-      <!--          [valueTemplate]="valueTemplate"-->
-      <!--          [listItemTemplate]="listItemTemplate"-->
-      <!--          [searchMatcher]="searchMatcher"-->
-      <!--          [formControl]="control"-->
-      <!--          [dropdownAutoReposition]="autoReposition"-->
-      <!--          [searchable]="searchable"-->
-      <!--          [dropdownStyles]="dropdownStyles"-->
-      <!--          [dropdownClasses]="dropdownClasses"-->
-      <!--          [prizmHintCanShow]="prizmHintCanShow"-->
-      <!--          [prizmHintDirection]="prizmHintDirection"-->
-      <!--          [dropdownScroll]="dropdownScroll"-->
-      <!--          [emptyListTemplate]="emptyListTemplate"-->
-      <!--          [prizmDropdownMinHeight]="prizmDropdownMinHeight"-->
-      <!--          [prizmDropdownMaxHeight]="prizmDropdownMaxHeight"-->
-      <!--          [icon]="$any(icon)"-->
-      <!--          [searchLabel]="searchLabel"-->
-      <!--          [items]="$any(items)"-->
-      <!--        ></prizm-input-select>-->
-      <!--      </prizm-input-layout>-->
     </prizm-doc-demo>
 
     <prizm-doc-documentation
@@ -275,6 +239,7 @@
         Dropdown Icon
       </ng-template>
       <ng-template
+        [(documentationPropertyValue)]="isChipsDeletable"
         documentationPropertyName="isChipsDeletable"
         documentationPropertyType="boolean"
         documentationPropertyMode="input"
