fix(components/tree-multi-select): fix bugs #0

--- a/libs/components/src/lib/components/dropdowns/tree-multi-select/item/tree-multi-select-item.component.html
+++ b/libs/components/src/lib/components/dropdowns/tree-multi-select/item/tree-multi-select-item.component.html
@@ -1,4 +1,4 @@
-<div class="item" [class.selected]="value | prizmCallFunc : isSelected">
+<div class="item" [class.selected]="value | prizmCallFunc : isSelected$ | async">
   <div class="icon-with-checkbox">
     <prizm-checkbox
       *ngIf="isSelected(); else intermediateOtUnselectedTemplate"
