feat(helpers/overflow): fix renderer #0

--- a/apps/doc/src/app/components/input/input-tree-multi-select/input-tree-multi-select.component.html
+++ b/apps/doc/src/app/components/input/input-tree-multi-select/input-tree-multi-select.component.html
@@ -37,6 +37,7 @@
         <prizm-input-tree-multi-select
           #element
           #input
+          [searchMatcher]="searchMatcher"
           [prizmDocHostElement]="element"
           [isChipsDeletable]="isChipsDeletable"
           [prizmDocHostElementKey]="selectKey"
