--- a/libs/components/src/lib/components/chips/chips.component.html
+++ b/libs/components/src/lib/components/chips/chips.component.html
@@ -9,7 +9,7 @@
   >
     <prizm-chips-item
       #overflowItem="prizmOverflowItem"
-      *ngFor="let item of chipsList; let i = index; trackBy: trackByIdx"
+      *ngFor="let item of chipsList; let i = index"
       [hintCanShow]="hintCanShow"
       [hintDirection]="hintDirection"
       [class.single-line]="singleLine"
