fix(components/tree-multi-select): fix bugs #0

--- a/libs/components/src/lib/components/dropdowns/tree-multi-select/item/tree-multi-select-item.component.less
+++ b/libs/components/src/lib/components/dropdowns/tree-multi-select/item/tree-multi-select-item.component.less
@@ -11,7 +11,7 @@
 
   &:before {
     content: '';
-    width: calc(
+    min-width: calc(
       var(--prizm-tree-multi-select-item-level) * var(--prizm-tree-multi-select-item-level-width, 28px)
     );
   }
