--- a/libs/components/src/lib/components/dropdowns/tree-select/items/tree-select-item.component.less
+++ b/libs/components/src/lib/components/dropdowns/tree-select/items/tree-select-item.component.less
@@ -11,7 +11,7 @@
 
   &:before {
     content: '';
-    width: calc(var(--prizm-tree-select-item-level) * var(--prizm-tree-select-item-level-width, 28px));
+    min-width: calc(var(--prizm-tree-select-item-level) * var(--prizm-tree-select-item-level-width, 28px));
   }
 
   &:hover {
