fix(components/tree-multi-select): fix bugs #0

--- a/apps/doc/src/app/components/input/input-tree-multi-select/examples/i18n/tree-select-i18n-example.component.html
+++ b/apps/doc/src/app/components/input/input-tree-multi-select/examples/i18n/tree-select-i18n-example.component.html
@@ -30,6 +30,6 @@
 
 <br />
 <br />
-<div>Current value: {{ control.value?.value }}</div>
+<div>Current value: {{ control.value?.[0]?.value }}</div>
 <div>Touched: {{ control.touched }}</div>
 <div>Dirty: {{ control.dirty }}</div>
