fix(components/query-builder): disable drag/drop handlers #402

--- a/libs/components/src/lib/components/query-builder/query-builder.component.html
+++ b/libs/components/src/lib/components/query-builder/query-builder.component.html
@@ -19,6 +19,7 @@
       [size]="'m'"
       [appearanceType]="'ghost'"
       [appearance]="'secondary'"
+      [disabled]="disabled"
       prizmIconButton
       cdkDragHandle
       tabindex="-1"
